# ESD

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CompileOptions.cmake
lab01/: CMakeLists.txt  main.cc  main.cpp
lab01/graph/: breadth_first_search.cc  breadth_first_search.cpp  breadth_first_search.h  breadth_first_search.hpp  depth_first_search.cc  depth_first_search.cpp  depth_first_search.h  depth_first_search.hpp  graph.cc  graph.cpp  graph.h  graph.hpp  pattern_search_result.h  pattern_search_result.hpp  search_params.cc  search_params.cpp  search_params.h  search_params.hpp  search_result.h  search_result.hpp
lab01/tests/: graph1.txt  graph2.txt  graph3.txt
lab01/types/: common.hpp  graph.h  graph.hpp
lab01/utils/: convert.h  convert.hpp  io_utils.hpp
lab02/: CMakeLists.txt  main.cc  main.cpp
lab02/graph/: breadth_first_search.cc  breadth_first_search.cpp  breadth_first_search.h  breadth_first_search.hpp  graph.cc  graph.cpp  graph.h  graph.hpp
lab02/tests/: graph1.txt
lab02/types/: common.h  common.hpp
lab03/: CMakeLists.txt  main.cc  main.cpp
lab03/graph/: depth_first_search.cc  depth_first_search.cpp  depth_first_search.h  depth_first_search.hpp  graph.cpp  graph.h  graph.hpp
lab03/types/: common.h  common.hpp  graph.h  graph.hpp
lab04/: CMakeLists.txt  atom.cc  atom.cpp  atom.h  atom.hpp  clause.cc  clause.cpp  clause.h  clause.hpp  main.cc  main.cpp  resolution.cc  resolution.cpp  resolution.h  resolution.hpp  resolvent.cc  resolvent.cpp  resolvent.h  resolvent.hpp
lab05/: CMakeLists.txt  main.cc  main.cpp  unification.cc  unification.cpp  unification.h
lab05/types/: atom.cc  atom.cpp  atom.h  atom.hpp  constant.h  constant.hpp  name.h  terminal.cc  terminal.cpp  terminal.h  terminal.hpp  variable.h  variable.hpp
lab05/utils/: io_join.h  io_join.hpp
lab06/: CMakeLists.txt  main.cc
lab06/types/: atom.cc  atom.h  clause.cc  clause.h  formula.cc  formula.h  terminal.cc  terminal.h
lab07/: formulas.py  main.py  models.py  parser.py
lab08/: main.py
